--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <section class="container  ourservices text-center">
   <h1>services</h1>
-  <p>we deliver on time,we always give best for customer</p>
+  <p>we deliver on time,we always give best to customer</p>
 
   <div class="row rowsetting">
     <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
